# ChangeLog for sec-policy/selinux-webalizer
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-webalizer/ChangeLog,v 1.30 2013/08/15 07:00:37 swift Exp $

  15 Aug 2013; Sven Vermeulen <swift@gentoo.org>
  selinux-webalizer-2.20130424-r2.ebuild:
  Stabilize r2 of policies

*selinux-webalizer-2.20130424-r2 (20 Jul 2013)

  20 Jul 2013; Sven Vermeulen <swift@gentoo.org>
  +selinux-webalizer-2.20130424-r2.ebuild:
  Pushing out rev 2

  16 Jun 2013; Sven Vermeulen <swift@gentoo.org>
  selinux-webalizer-2.20130424-r1.ebuild:
  Stabilize 20130424 policies

*selinux-webalizer-2.20130424-r1 (06 May 2013)

  06 May 2013; Sven Vermeulen <swift@gentoo.org>
  +selinux-webalizer-2.20130424-r1.ebuild:
  Adding 20130424 release

  29 Mar 2013; Sven Vermeulen <swift@gentoo.org>
  selinux-webalizer-2.20120725-r12.ebuild:
  Stabilize r12, fixes 455080, 453724, 461880, 453722, 452166, 458876, 457618,
  456910, 456194, 453990 and 460152

*selinux-webalizer-2.20120725-r12 (09 Mar 2013)

  09 Mar 2013; Sven Vermeulen <swift@gentoo.org>
  +selinux-webalizer-2.20120725-r12.ebuild:
  Pushing out rev 12

  23 Feb 2013; Sven Vermeulen <swift@gentoo.org>
  selinux-webalizer-2.20120725-r11.ebuild:
  Stabilization

*selinux-webalizer-2.20120725-r11 (26 Jan 2013)

  26 Jan 2013; Sven Vermeulen <swift@gentoo.org>
  +selinux-webalizer-2.20120725-r11.ebuild:
  Bumping selinux-webalizer to revision 11

  13 Jan 2013; Sven Vermeulen <swift@gentoo.org>
  selinux-webalizer-2.20120725-r9.ebuild:
  Stabilizing r9

*selinux-webalizer-2.20120725-r9 (21 Dec 2012)

  21 Dec 2012; Sven Vermeulen <swift@gentoo.org> +selinux-webalizer-2.20120725-r9.ebuild:
  Bumping to revision 9

  17 Dec 2012; Sven Vermeulen <swift@gentoo.org> -selinux-webalizer-2.20120215-r14.ebuild,
  -selinux-webalizer-2.20120215-r15.ebuild,
  -selinux-webalizer-2.20120215-r2.ebuild, -selinux-webalizer-2.20120215.ebuild:
  Removing older ebuilds
