@@ -1,6 +1,10 @@
 # ChangeLog for sec-policy/selinux-webalizer
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-webalizer/ChangeLog,v 1.30 2013/08/15 07:00:37 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-webalizer/ChangeLog,v 1.31 2013/09/20 09:26:57 swift Exp $
+
+  20 Sep 2013; Sven Vermeulen <swift@gentoo.org>
+  selinux-webalizer-2.20130424-r2.ebuild, selinux-webalizer-9999.ebuild:
+  Add dependency on apache module (needed for templates)
 
   15 Aug 2013; Sven Vermeulen <swift@gentoo.org>
   selinux-webalizer-2.20130424-r2.ebuild:
